Fix up container messes.  Still doesn’t work on mobile :(.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -66,6 +66,28 @@
 .fade.ng-leave.ng-leave-active {
   opacity: 0;
 }
+
+.main-container {
+  margin-top: 45px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+      
+  @media #{ $small-only } {
+    &> div {
+      position: absolute;
+      background-color: red;
+      top: 0px;
+      left: 0px;
+      right: 0px;
+      bottom: 0px;
+      overflow: scroll;
+    }
+  }
+}
+
+
+      
       
 @import "courses";
 @import "social";
